[package]
name = "game"
version = "0.1.0"
authors = ["loomaclin <loo.maclin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.2.0-alpha.0"
nalgebra = "0.20"
ncollide2d = "0.22"
nphysics2d = "0.14"